--- a/dev_split_slice_grappa.ipynb
+++ b/dev_split_slice_grappa.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +99,9 @@
     "\n",
     "# calibrate the kernels\n",
     "sg1 = slice_grappa(target, accel=(1,1), kernel_size=(3,3), tik=0.0, final_matrix_size=(128,128))\n",
-    "# sg2 = slice_grappa(target, accel=(1,2), kernel_size=(5,4), tik=0.0, final_matrix_size=(128,128))\n",
-    "# spsg1 = split_slice_grappa(target, accel=(1,1), kernel_size=(3,3), tik=0.0, final_matrix_size=(128,128))\n",
-    "# spsg2 = split_slice_grappa(target, accel=(1,2), kernel_size=(5,4), tik=0.0, final_matrix_size=(128,128))\n"
+    "sg2 = slice_grappa(target, accel=(1,2), kernel_size=(5,4), tik=0.0, final_matrix_size=(128,128))\n",
+    "spsg1 = split_slice_grappa(target, accel=(1,1), kernel_size=(3,3), tik=0.0, final_matrix_size=(128,128))\n",
+    "spsg2 = split_slice_grappa(target, accel=(1,2), kernel_size=(5,4), tik=0.0, final_matrix_size=(128,128))\n"
    ]
   },
   {
