Changed some comments and reworked looping logic for ACS lines

--- a/sample_recon.ipynb
+++ b/sample_recon.ipynb
@@ -12,7 +12,7 @@
     "**1.)** Download the repository to a local directory.  \n",
     "**2.)** In this file, scroll to the \"User Inputs\" section and look at the \"FILEPATH SETUP\" section.  \n",
     "**3.)** Fill in the sms_folder and raki_recon_folder with the \"data\" and \"model_folder\" filepaths, respectively.  \n",
-    "**4.)** In the \"GPU ACCELERATION\" section, input your pytorch device of choice, GPU is highly recommended.  \n",
+    "**4.)** In the \"GPU ACCELERATION\" section, input your PyTorch device of choice, GPU is highly recommended.  \n",
     "**5.)** Look through the other values within the \"USER INPUT\" section and adjust as desired.  \n",
     "**6.)** Select \"Run All\" in the notebook.  \n",
     "\n",
@@ -119,7 +119,7 @@
     "# Possible options: True / False\n",
     "coil_compression = True\n",
     "\n",
-    "# The number of coils after compression \n",
+    "# The number of coils after compression\n",
     "# Accepted values = Integers less than 32\n",
     "ncoils = 16\n",
     "\n",
@@ -154,9 +154,8 @@
     "in_plane_acceleration_factors = [1, 2]\n",
     "\n",
     "# Number of ACS lines used in accelerated datasets (retrospective)\n",
-    "# Can only be a single value, as opposed to a list\n",
-    "# Note: The lines containing \"del obj\" can be commented out to allow for lists, but at the cost\n",
-    "# of extra GPU memory\n",
+    "# Can be a list, but recommended to be a singular value\n",
+    "# Note: The code will utilize significantly more GPU resources if there are multiple values in the list\n",
     "# Accepted values: Positive integer value less than 256\n",
     "in_plane_acs_sizes = [0]\n",
     "\n",
@@ -233,6 +232,8 @@
    "outputs": [],
    "source": [
     "# Load in all data (keep on cpu until it is needed)\n",
+    "\n",
+    "# Initialize data arrays\n",
     "calib_data = []\n",
     "accel_data = []\n",
     "ref_images = []\n",
@@ -406,6 +407,8 @@
     "                                kernel_size = (rks, pks if rip == 1 else 2*(pks//2))\n",
     "                                obj = split_slice_grappa(data_cal, accel=accel, kernel_size=kernel_size, tik=tik, final_matrix_size=final_matrix_size)\n",
     "\n",
+    "                            # Loops over all other reconstruction parameters\n",
+    "\n",
     "                            # Loops over number of ACS lines\n",
     "                            for nacs in in_plane_acs_sizes:\n",
     "\n",
@@ -434,7 +437,8 @@
     "                                ksp_recon, _ = obj.apply(data_acc)\n",
     "\n",
     "                                # Frees up GPU memory\n",
-    "                                del obj\n",
+    "                                if len(in_plane_acs_sizes)==1:\n",
+    "                                    del obj\n",
     "\n",
     "                                # Remove CAIPI shifts from reconstructed data\n",
     "                                blip_phase_increment = 2 * np.pi / sms \n",
@@ -490,25 +494,27 @@
     "                                                # Loops over all desired network types\n",
     "                                                for net_type in net_types:\n",
     "\n",
-    "                                                    # Determines the best kernel size depending on the current algorithm and then conducts the neural network training\n",
-    "                                                    if recon_name == 'sense-raki':\n",
-    "                                                        kernel_size = (2*(rks//2), pks if rip == 1 else 2*(pks//2))\n",
-    "                                                        obj = sense_raki(data_cal, raki_recon_folder, accel=accel, kernel_size=kernel_size, final_matrix_size=final_matrix_size,\n",
-    "                                                                            linear_weight=linear_weight, num_epochs=epochs, num_layers=nlayers, hidden_size=hsize, train_split=train_split,\n",
-    "                                                                            loss_function='L1_L2', l2_frac=l2_frac, net_type=net_type)\n",
-    "                                                    elif recon_name == 'slice-raki':\n",
-    "                                                        kernel_size = (rks, pks if rip == 1 else 2*(pks//2))\n",
-    "                                                        obj = slice_raki(data_cal, raki_recon_folder, accel=accel, kernel_size=kernel_size, final_matrix_size=final_matrix_size,\n",
-    "                                                                            linear_weight=linear_weight, num_epochs=epochs, num_layers=nlayers, hidden_size=hsize, train_split=train_split,\n",
-    "                                                                            loss_function='L1_L2', l2_frac=l2_frac, net_type=net_type)\n",
-    "                                                    elif recon_name == 'split-slice-raki':\n",
-    "                                                        kernel_size = (rks, pks if rip == 1 else 2*(pks//2))\n",
-    "                                                        obj = split_slice_raki(data_cal, raki_recon_folder, accel=accel, kernel_size=kernel_size, final_matrix_size=final_matrix_size,\n",
-    "                                                                            linear_weight=linear_weight, num_epochs=epochs, num_layers=nlayers, hidden_size=hsize, train_split=train_split,\n",
-    "                                                                            loss_function='L1_L2', l2_frac=l2_frac, net_type=net_type)\n",
+    "                                                    # Loops over all other reconstruction parameters\n",
     "\n",
     "                                                    # Loops over number of ACS lines  \n",
     "                                                    for nacs in in_plane_acs_sizes:\n",
+    "\n",
+    "                                                        # Determines the best kernel size depending on the current algorithm and then conducts the neural network training\n",
+    "                                                        if recon_name == 'sense-raki':\n",
+    "                                                            kernel_size = (2*(rks//2), pks if rip == 1 else 2*(pks//2))\n",
+    "                                                            obj = sense_raki(data_cal, raki_recon_folder, accel=accel, kernel_size=kernel_size, final_matrix_size=final_matrix_size,\n",
+    "                                                                                linear_weight=linear_weight, num_epochs=epochs, num_layers=nlayers, hidden_size=hsize, train_split=train_split,\n",
+    "                                                                                loss_function='L1_L2', l2_frac=l2_frac, net_type=net_type)\n",
+    "                                                        elif recon_name == 'slice-raki':\n",
+    "                                                            kernel_size = (rks, pks if rip == 1 else 2*(pks//2))\n",
+    "                                                            obj = slice_raki(data_cal, raki_recon_folder, accel=accel, kernel_size=kernel_size, final_matrix_size=final_matrix_size,\n",
+    "                                                                                linear_weight=linear_weight, num_epochs=epochs, num_layers=nlayers, hidden_size=hsize, train_split=train_split,\n",
+    "                                                                                loss_function='L1_L2', l2_frac=l2_frac, net_type=net_type)\n",
+    "                                                        elif recon_name == 'split-slice-raki':\n",
+    "                                                            kernel_size = (rks, pks if rip == 1 else 2*(pks//2))\n",
+    "                                                            obj = split_slice_raki(data_cal, raki_recon_folder, accel=accel, kernel_size=kernel_size, final_matrix_size=final_matrix_size,\n",
+    "                                                                                linear_weight=linear_weight, num_epochs=epochs, num_layers=nlayers, hidden_size=hsize, train_split=train_split,\n",
+    "                                                                                loss_function='L1_L2', l2_frac=l2_frac, net_type=net_type)\n",
     "\n",
     "                                                        # Transfer accelerated data to device for current SMS factor\n",
     "                                                        data_acc = accel_data[sms_factors.index(sms)].clone().to(device)\n",
@@ -535,7 +541,8 @@
     "                                                        ksp_recon, _ = obj.apply(data_acc)\n",
     "\n",
     "                                                        # Frees up GPU memory\n",
-    "                                                        del obj\n",
+    "                                                        if len(in_plane_acs_sizes)==1:\n",
+    "                                                            del obj\n",
     "\n",
     "                                                        # Remove CAIPI shifts from reconstructed data\n",
     "                                                        blip_phase_increment = 2 * np.pi / sms \n",
@@ -547,7 +554,7 @@
     "                                                        img_recon = ifft2d(ksp_recon, dims=(2,3))\n",
     "                                                        img_recon = torch.sqrt(torch.sum(torch.abs(img_recon * img_recon.conj()), dim=1))\n",
     "\n",
-    "                                                        # Plots the GRAPPA reconstructions\n",
+    "                                                        # Plots the RAKI reconstructions\n",
     "                                                        fig, ax = plt.subplots(1,sms)\n",
     "                                                        fig.set_figwidth(3*sms)\n",
     "                                                        for n in range(sms):\n",
