Added AI-created bspline NN function as starting point

--- a/sample_recon.ipynb
+++ b/sample_recon.ipynb
@@ -105,11 +105,13 @@
     "\n",
     "# The filepath that contains the SMS data\n",
     "# String should be along the lines of: \"/{filepath-to-repository}/multiband_mri/data\"\n",
-    "sms_folder = '/{filepath-to-repository}/multiband_mri/data'\n",
+    "sms_folder = '/Users/ty12125/research/Adaptive_MRI_Repositories/multiband_mri/data'\n",
+    "# sms_folder = '/{filepath-to-repository}/multiband_mri/data'\n",
     "\n",
     "# The path that contains RAKI models\n",
     "# String should be along the lines of: \"/{filepath-to-repository}/multiband_mri/model_folder\"\n",
-    "raki_recon_folder = '/{filepath-to-repository}/multiband_mri/model_folder'\n",
+    "raki_recon_folder = '/Users/ty12125/research/Adaptive_MRI_Repositories/multiband_mri/model_folder'\n",
+    "# raki_recon_folder = '/{filepath-to-repository}/multiband_mri/model_folder'\n",
     "\n",
     "################################\n",
     "#       COIL COMPRESSION       #\n",
