Fixed an error in the comments

--- a/sample_recon.ipynb
+++ b/sample_recon.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "# A list of all RAKI recon types to complete\n",
     "# Can be empty, will only perform GRAPPA if that is the case\n",
-    "# Possible options: 'slice-grappa', 'split-slice-grappa', 'sense-grappa'\n",
+    "# Possible options: 'slice-raki', 'split-slice-raki', 'sense-raki'\n",
     "raki_recon_types = ['slice-raki', 'split-slice-raki', 'sense-raki']\n",
     "\n",
     "################################\n",
