Minor comment changes

--- a/sample_recon.ipynb
+++ b/sample_recon.ipynb
@@ -162,7 +162,7 @@
     "readout_kernel_size = [5]\n",
     "\n",
     "# List of phase kernel sizes \n",
-    "# Accepted values: Odd values (will become even if appropriate)\n",
+    "# Accepted values: Odd values (will become even if appropriate (i.e. SENSE-GRAPPA))\n",
     "phase_kernel_size = [5] \n",
     "\n",
     "################################\n",
@@ -182,7 +182,7 @@
     "# 'RES' - complex-valued residual network with fully connected layers\n",
     "#         (if 'RES' is selected, num_layers will be the number of residual blocks,\n",
     "#          which themselves each have three fully-connected layers)\n",
-    "# Adding a 'b' to the end of the net_type (i.e. 'MLPb' or 'RESb' will use complex \n",
+    "# Adding a 'b' to the end of the net_type (i.e. 'MLPb' or 'RESb') will use complex \n",
     "#         b-splines instead of the complex ReLU that is typically used\n",
     "net_types = ['MLP']\n",
     "\n",
@@ -211,7 +211,7 @@
     "# List of L1/L2 loss tradeoff values\n",
     "# Accepted values: Between zero and one, including zero and one\n",
     "# 0.0 = L1 loss\n",
-    "# 1.0 = L2 loss\n",
+    "# 1.0 = L2 loss (MSE loss)\n",
     "# 0.0 < value < 1.0 is a weighted sum of L1 and L2\n",
     "l1_l2_tradeoff_values = [0.0]"
    ]
